# docling-ts

./: .gitignore  CODE_OF_CONDUCT.md  README.md
docling-components/: README.md  eslint.config.mjs  package-lock.json  package.json  svelteup.config.js  tsconfig.json  vite.config.js
docling-components/src/: index.js  index.ts  props.ts  util.ts
docling-components/src/annotation/: AnnotationElement.ts  AnnotationPictureClassification.ts  AnnotationPictureDescription.ts  index.ts  registry.ts
docling-components/src/img/: ImgPage.svelte  ImgPage.ts  ImgPages.svelte  ImgPages.ts  ImgPagesBackup.svelte  ImgTooltip.svelte  ImgTrace.ts  index.ts
docling-components/src/item/: CroppedItem.svelte  ItemCropped.ts  ItemElement.ts  ItemList.svelte  ItemList.ts  ItemProvenance.ts  ItemSectionHeader.svelte  ItemSectionHeader.ts  ItemTable.svelte  ItemTable.ts  ItemTemplate.ts  ItemText.svelte  ItemText.ts  ItemView.svelte  ItemView.ts  ListItem.svelte  OmniItem.svelte  ParsedItem.svelte  SectionHeaderItem.svelte  TableItem.svelte  TextItem.svelte  index.ts  registry.ts
docling-components/src/list/: ListItem.svelte  (+2 more)
docling-core/: README.md  eslint.config.mjs  generate.sh  package-lock.json  package.json  pyproject.toml
docling-core/src/: index.ts
docling-core/src/types/: index.ts  models.ts  typing.ts
docs/examples/: index.css  index.html
docs/smol/: doctags.js  index.css  index.html  inference.js
examples/deno/: .gitignore  README.md  deno.json  serve.sh
examples/deno/localconvert/: pyproject.toml
examples/deno/localconvert/localconvert/: convert.py
(+29 files in other folders)
